tests/sksl/errors/ReservedNameCast.glsl
### Compilation failed:

error: 1: 'cast' is a reserved word
int cast;
    ^^^^
1 error
